--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-js",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index_копия.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "colors": "^1.4.0"
+    "colors": "^1.4.0",
+    "inquirer": "^8.2.0",
+    "nodemon": "^2.0.15"
   }
 }
