--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
+    "inquirer": "^8.2.0",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.4.0"
+    "socket.io": "^4.4.0",
+    "yargs": "^17.3.0"
   }
 }
